@@ -69,7 +69,8 @@ get_tag_cdata({xmlelement, _Name, _Attrs, Els}) ->
     get_cdata(Els).
 
 get_attr(AttrName, Attrs) ->
-    case exmpp_xml:get_attribute_from_list(Attrs, AttrName, undefined) of
+    case exmpp_xml:get_attribute_from_list_as_list(Attrs, AttrName,
+      undefined) of
 	undefined ->
 	    false;
 	Val ->
@@ -77,7 +78,7 @@ get_attr(AttrName, Attrs) ->
     end.
 
 get_attr_s(AttrName, Attrs) ->
-    exmpp_xml:get_attribute_from_list(Attrs, AttrName, "").
+    exmpp_xml:get_attribute_from_list_as_list(Attrs, AttrName, "").
 
 get_tag_attr(AttrName, #xmlel{attrs = Attrs}) ->
     get_attr(AttrName, Attrs);
@@ -85,7 +86,7 @@ get_tag_attr(AttrName, #xmlelement{attrs = Attrs}) ->
     get_attr(AttrName, Attrs).
 
 get_tag_attr_s(AttrName, El) ->
-    exmpp_xml:get_attribute(El, AttrName, "").
+    exmpp_xml:get_attribute_as_list(El, AttrName, "").
 
 
 get_subtag(El, Name) ->
